--- a/.github/workflows/main_python-stocks.yml
+++ b/.github/workflows/main_python-stocks.yml
@@ -4,6 +4,10 @@
 
 name: Build and deploy Python app to Azure Web App - python-stocks
 
+env:
+  AZURE_WEB_APP_NAME : python_stocks_007
+  PYTHON_VERSION : '3.8'
+
 on:
   push:
     branches:
@@ -20,7 +24,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v1
         with:
-          python-version: '3.8'
+          python-version: ${env.PYTHON_VERSION}
 
       - name: Create and start virtual environment
         run: |
@@ -58,6 +62,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'python-stocks'
+          app-name: ${env.AZURE_WEBAPP_NAME}
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_35466089AC1248FCA70B28354FEACDF3 }}
+          publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
