--- a/.github/workflows/main_python-stocks.yml
+++ b/.github/workflows/main_python-stocks.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v1
         with:
-          python-version: ${env.PYTHON_VERSION}
+          python-version: '3.8'
 
       - name: Create and start virtual environment
         run: |
