--- a/.github/workflows/main_python-stocks.yml
+++ b/.github/workflows/main_python-stocks.yml
@@ -63,5 +63,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: ${env.AZURE_WEBAPP_NAME}
-    
+          slot-name: 'test'
           publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
