updated the workflow version 1.7

--- a/.github/workflows/main_python-stocks.yml
+++ b/.github/workflows/main_python-stocks.yml
@@ -57,11 +57,20 @@ jobs:
         with:
           name: python-app
           path: .
-          
+
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
         with:
-          app-name: ${env.AZURE_WEBAPP_NAME}
-          slot-name: 'test'
-          publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
+            app-name: ${{ env.AZURE_WEBAPP_NAME }}
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          
+
+      # - name: 'Deploy to Azure Web App'
+      #   # uses: azure/webapps-deploy@v2
+      #   uses: azure/webapps-deploy@0b651ed754024011f76944cb9b381efle
+      #   id: deploy-to-webapp
+      #   with:
+      #     app-name: ${env.AZURE_WEBAPP_NAME}
+      #     slot-name: 'test'
+      #     publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
