--- a/.github/workflows/main_python-stocks.yml
+++ b/.github/workflows/main_python-stocks.yml
@@ -1,76 +1,76 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
+# # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# # More GitHub Actions for Azure: https://github.com/Azure/actions
+# # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - python-stocks
+# name: Build and deploy Python app to Azure Web App - python-stocks
 
-env:
-  AZURE_WEB_APP_NAME : 'python-stocks-007'
-  PYTHON_VERSION : '3.8'
+# env:
+#   AZURE_WEB_APP_NAME : 'python-stocks-007'
+#   PYTHON_VERSION : '3.8'
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.8'
+#       - name: Set up Python version
+#         uses: actions/setup-python@v1
+#         with:
+#           python-version: '3.8'
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
+#       - name: Create and start virtual environment
+#         run: |
+#           python -m venv venv
+#           source venv/bin/activate
       
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+#       - name: Install dependencies
+#         run: pip install -r requirements.txt
         
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+#       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            . 
-            !venv/
+#       - name: Upload artifact for deployment jobs
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: python-app
+#           path: |
+#             . 
+#             !venv/
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     environment:
+#       name: 'Production'
+#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: python-app
-          path: .
+#     steps:
+#       - name: Download artifact from build job
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: python-app
+#           path: .
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
-        with:
-            app-name: ${{ env.AZURE_WEBAPP_NAME }}
-            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+#       - name: 'Deploy to Azure Web App'
+#         id: deploy-to-webapp
+#         uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+#         with:
+#             app-name: ${{ env.AZURE_WEBAPP_NAME }}
+#             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           
 
-      # - name: 'Deploy to Azure Web App'
-      #   # uses: azure/webapps-deploy@v2
-      #   uses: azure/webapps-deploy@0b651ed754024011f76944cb9b381efle
-      #   id: deploy-to-webapp
-      #   with:
-      #     app-name: ${env.AZURE_WEBAPP_NAME}
-      #     slot-name: 'test'
-      #     publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
+#       # - name: 'Deploy to Azure Web App'
+#       #   # uses: azure/webapps-deploy@v2
+#       #   uses: azure/webapps-deploy@0b651ed754024011f76944cb9b381efle
+#       #   id: deploy-to-webapp
+#       #   with:
+#       #     app-name: ${env.AZURE_WEBAPP_NAME}
+#       #     slot-name: 'test'
+#       #     publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
