--- a/.github/workflows/python-cicd-pipeline.yml
+++ b/.github/workflows/python-cicd-pipeline.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Python app to Azure Web App
+name:  Python CICD Pipeline💥
 
 env:
   AZURE_WEBAPP_NAME: python-stocks-007   # set this to your application's name
@@ -49,9 +49,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    # environment:
+    #   name: 'production'
+    #   url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
